# Cache-Simulator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Readme.md  build.sh  cache  main
BenchmarkResults/: algBenchmarks.csv  cacheLineSizeBenchmarksFastMem.csv  cacheLineSizeBenchmarksSlowMem.csv  mappingBenchmarkPolicyGates.csv  mappingBenchmarks.csv  mappingBenchmarksAlg.csv  mappingBenchmarksLineNum.csv  mappingBenchmarksLineNumGates.csv  mappingBenchmarksLineSize.csv  mappingBenchmarksMemLatency.csv  policyBenchmarks.csv
examples/: exampleinputfile.csv
src/: ArgParsing.c  ArgParsing.h  Argparsing.h  CMakeLists.txt  CPU.cpp  CPU.h  Cache.cpp  Cache.h  CacheInternal.cpp  CacheInternal.h  DecomposedAddress.h  FIFOPolicy.h  FileDataExtraction.c  FileDataExtraction.h  FileProcessor.c  FileProcessor.h  InstructionCache.cpp  InstructionCache.h  InternalRequests.h  LRU.h  LRUPolicy.h  Memory.h  OrGate.h  RandomPolicy.h  ReadOnlySpan.h  ReplacementPolicy.h  Request.h  Result.h  RingQueue.h  Simulation.cpp  Simulation.h  Sort.c  SubRequest.cpp  SubRequest.h  WriteBuffer.h  cache.hpp  main  main.c  memory.hpp  request.h  (+4 more)
src/Policy/: FIFOPolicy.h  Policy.h  RandomPolicy.h  ReplacementPolicy.h
src/Simulation/: CMakeLists.txt  CPU.cpp  CPU.h  Cache.cpp  Cache.h  Cacheline.h  Connections.h  DecomposedAddress.h  InstructionCache.h  Memory.h  PortAdapter.h  RAM.cpp  RAM.h  RingQueue.h  Saturating_Arithmetic.h  Simulation.cpp  Simulation.h  SubRequest.cpp  SubRequest.h  WriteBuffer.h
src/Simulation/Policy/: FIFOPolicy.h  LRUPolicy.h  RandomPolicy.h  ReplacementPolicy.h
tests/: AdapterTests.cpp  ArgParsingTests.py  BenchmarkSortTest.cpp  CMakeLists.txt  CPUTests.cpp  CacheInternalTests.cpp  CacheTests.cpp  CommandLineArgumentGenerator.py  CommandLineTestGenerator.py  FIFOTests.cpp  FileProcessorTests.py  InputFileGenerator.py  IntegrationTests.cpp  LRUTests.cpp  MainTests.py  MemoryTests.cpp  Utils.cpp  Utils.h  inputfile.csv  template.cpp
tests/InvalidFiles/: invalid_data.csv  no_address.csv  no_data_saved_w.csv  no_empty_data_R.csv  no_valid_we.csv
tools/: BenchmarkRunner.py  Makefile  Readme.md
tools/BenchmarkInputGenerator/: BenchmarkInputGenerator.py  FileReader.h  Makefile  MergeSortDriver.cpp  RadixSortDriver.cpp  Sort.h
tools/BenchmarkInputGenerator/Benchmarks/: merge_sort_10.csv  merge_sort_100.csv  radix_sort_10.csv  radix_sort_100.csv
tools/MemoryAnalyser/: CMakeLists.txt  Makefile  MemoryAnalyser.cpp
tools/MemoryAnalyser/include/: MemoryAnalyserSupport.h
tools/RandomNumberGenerator/: Makefile  RandomNumberGenerator.cpp
